# poetry-dockerize-plugin

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dockerpyze/: builder.py  poetry_plugin.py
poetry_auto_docker_plugin/: __main__.py  builder.py  plugin.py
poetry_dockerize_plugin/: builder.py  plugin.py
tests/: test_builder.py
tests/dummy_project/: pyproject.toml
tests/test_project/: pyproject.toml
tests/test_project/app/: __main__.py
